alert-correlation-middleware/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: alert-middleware
  labels:
    app.kubernetes.io/name: alert-correlation-middleware
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  selector:
    app.kubernetes.io/name: alert-correlation-middleware
    app.kubernetes.io/component: redis
