alert-correlation-middleware/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-middleware-svc
  namespace: alert-middleware
  labels:
    app.kubernetes.io/name: alert-correlation-middleware
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: alert-correlation-middleware
    app.kubernetes.io/component: app
